refactor: code and editor style

--- a/index.html
+++ b/index.html
@@ -1,34 +1,96 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns='http://www.w3.org/1999/xhtml' lang='es'>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Restaurante Tritón</title>
-<link href="estilos.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-17648037-4']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
+  <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
+  <title>Restaurante Tritón | porfi.dev site</title>
+  <link href='styles/estilos.css' rel='stylesheet' type='text/css' />
 </head>
 
 <body>
-<div id="central_principal">
-  <div id="logo_principal"><img src="imagenes/logo_principal.png" width="1024" height="316" /></div>
-  <div id="menu_principal"><img src="imagenes/menu.png" width="1024" height="34" border="0" usemap="#Map" />
-    <map name="Map" id="Map"><area shape="rect" coords="772,2,1010,31" href="ubicacion.html" alt="Ubicación" /><area shape="rect" coords="517,2,755,31" href="contactanos.php" alt="Contactanos" /><area shape="rect" coords="268,2,506,31" href="menu.html" alt="Menú" />
-      <area shape="rect" coords="15,2,253,31" href="conocenos.html" alt="Conocenos" />
+<div id='central_principal'>
+  <div id='logo_principal'>
+    <img
+      src='imagenes/logo_principal.png'
+      width='1024'
+      height='316'
+      alt='logo principal'
+    />
+  </div>
+  <div id='menu_principal'>
+    <img
+      alt='menu'
+      src='imagenes/menu.png'
+      width='1024'
+      height='34'
+      border='0'
+      usemap='#Map'
+    />
+    <map name='Map' id='Map'>
+      <area
+        shape='rect'
+        coords='772,2,1010,31'
+        href='pages/ubicacion.html'
+        alt='Ubicación'
+      />
+      <area
+        shape='rect'
+        coords='517,2,755,31'
+        href='pages/contactanos.html'
+        alt='Contactanos'
+      />
+      <area
+        shape='rect'
+        coords='268,2,506,31'
+        href='pages/menu.html'
+        alt='Menú'
+      />
+      <area
+        shape='rect'
+        coords='15,2,253,31'
+        href='pages/conocenos.html'
+        alt='Conocenos'
+      />
     </map>
   </div>
-  <div id="imagenes_principal"><img src="imagenes/pic_01.jpg" width="216" height="325" border="0" class="pic1" /><img src="imagenes/pic_02.jpg" width="216" height="325" class="pic1" /><img src="imagenes/pic_03.jpg" width="216" height="325" class="pic1" /><img src="imagenes/pic_04.jpg" width="216" height="325" class="pic1" /></div>
-  <div id="promos"><a href="promociones.html"><img src="imagenes/promociones.png" width="1024" height="38" border="0" /></a></div>
+  <div id='imagenes_principal'>
+    <img
+      alt='conocenos'
+      src='imagenes/pic_01.jpg'
+      width='216'
+      height='325'
+      border='0'
+      class='pic1'
+    /><img
+    alt='nuestro menú'
+    src='imagenes/pic_02.jpg'
+    width='216'
+    height='325'
+    class='pic1'
+  /><img
+    alt='contáctanos'
+    src='imagenes/pic_03.jpg'
+    width='216'
+    height='325'
+    class='pic1'
+  /><img
+    alt='encuéntranos'
+    src='imagenes/pic_04.jpg'
+    width='216'
+    height='325'
+    class='pic1'
+  />
+  </div>
+  <div id='promos'>
+    <a href='pages/promociones.html'
+    ><img
+      alt='promociones'
+      src='imagenes/promociones.png'
+      width='1024'
+      height='38'
+      border='0'
+    /></a>
+  </div>
 </div>
 </body>
 </html>
