fix: center position

--- a/index.html
+++ b/index.html
@@ -8,89 +8,95 @@
 </head>
 
 <body>
-<div id='central_principal'>
-  <div id='logo_principal'>
-    <img
-      src='imagenes/logo_principal.png'
-      width='1024'
-      height='316'
-      alt='logo principal'
-    />
-  </div>
-  <div id='menu_principal'>
-    <img
-      alt='menu'
-      src='imagenes/menu.png'
-      width='1024'
-      height='34'
-      border='0'
-      usemap='#Map'
-    />
-    <map name='Map' id='Map'>
-      <area
-        shape='rect'
-        coords='772,2,1010,31'
-        href='pages/ubicacion.html'
-        alt='Ubicación'
+<div class='container'>
+  <div id='central_principal'>
+    <div id='logo_principal'>
+      <img
+        src='imagenes/logo_principal.png'
+        width='1024'
+        height='316'
+        alt='logo principal'
       />
-      <area
-        shape='rect'
-        coords='517,2,755,31'
-        href='pages/contactanos.html'
-        alt='Contactanos'
+    </div>
+    <div id='menu_principal'>
+      <img
+        alt='menu'
+        src='imagenes/menu.png'
+        width='1024'
+        height='34'
+        border='0'
+        usemap='#Map'
       />
-      <area
-        shape='rect'
-        coords='268,2,506,31'
-        href='pages/menu.html'
-        alt='Menú'
-      />
-      <area
-        shape='rect'
-        coords='15,2,253,31'
-        href='pages/conocenos.html'
-        alt='Conocenos'
-      />
-    </map>
-  </div>
-  <div id='imagenes_principal'>
-    <img
-      alt='conocenos'
-      src='imagenes/pic_01.jpg'
+      <map name='Map' id='Map'>
+        <area
+          shape='rect'
+          coords='772,2,1010,31'
+          href='pages/ubicacion.html'
+          alt='Ubicación'
+        />
+        <area
+          shape='rect'
+          coords='517,2,755,31'
+          href='pages/contactanos.html'
+          alt='Contactanos'
+        />
+        <area
+          shape='rect'
+          coords='268,2,506,31'
+          href='pages/menu.html'
+          alt='Menú'
+        />
+        <area
+          shape='rect'
+          coords='15,2,253,31'
+          href='pages/conocenos.html'
+          alt='Conocenos'
+        />
+      </map>
+    </div>
+    <div id='imagenes_principal'>
+      <img
+        alt='conocenos'
+        src='imagenes/pic_01.jpg'
+        width='216'
+        height='325'
+        border='0'
+        class='pic1'
+      /><img
+      alt='nuestro menú'
+      src='imagenes/pic_02.jpg'
       width='216'
       height='325'
-      border='0'
       class='pic1'
     /><img
-    alt='nuestro menú'
-    src='imagenes/pic_02.jpg'
-    width='216'
-    height='325'
-    class='pic1'
-  /><img
-    alt='contáctanos'
-    src='imagenes/pic_03.jpg'
-    width='216'
-    height='325'
-    class='pic1'
-  /><img
-    alt='encuéntranos'
-    src='imagenes/pic_04.jpg'
-    width='216'
-    height='325'
-    class='pic1'
-  />
+      alt='contáctanos'
+      src='imagenes/pic_03.jpg'
+      width='216'
+      height='325'
+      class='pic1'
+    /><img
+      alt='encuéntranos'
+      src='imagenes/pic_04.jpg'
+      width='216'
+      height='325'
+      class='pic1'
+    />
+    </div>
+    <div id='promos'>
+      <a href='pages/promociones.html'
+      ><img
+        alt='promociones'
+        src='imagenes/promociones.png'
+        width='1024'
+        height='38'
+        border='0'
+      /></a>
+    </div>
   </div>
-  <div id='promos'>
-    <a href='pages/promociones.html'
-    ><img
-      alt='promociones'
-      src='imagenes/promociones.png'
-      width='1024'
-      height='38'
-      border='0'
-    /></a>
+  <div class='footer'>
+    <span>Desarrollado por <a href='https://porfi.dev'>porfi.dev</a></span>
   </div>
 </div>
+
 </body>
 </html>
