--- a/pages/conocenos.html
+++ b/pages/conocenos.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns='http://www.w3.org/1999/xhtml'>
+<html xmlns='http://www.w3.org/1999/xhtml' lang='es'>
 <head>
   <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   <title>Restaurante Tritón | porfi.dev site</title>
@@ -8,10 +8,16 @@
 </head>
 
 <body>
-<div id='central_principal'>
-  <div id='logo'><img height='341' src='../imagenes/logo.png' width='343' /></div>
-  <div id='titulo'><img height='57' src='../imagenes/titulo_conocenos.png' width='195' /></div>
-  <div id='contenido'><img height='652' src='../imagenes/texto_conocenos.png' width='897' /></div>
+<div class='container'>
+  <div id='central_principal'>
+    <div id='logo'><img height='341' src='../imagenes/logo.png' width='343' alt='logo' /></div>
+    <div id='titulo'><img height='57' src='../imagenes/titulo_conocenos.png' width='195' alt='conocenos' /></div>
+    <div id='contenido'><img height='652' src='../imagenes/texto_conocenos.png' width='897' alt='texto conocenos' />
+    </div>
+  </div>
+  <div class='footer'>
+    <span>Desarrollado por <a href='https://porfi.dev'>porfi.dev</a></span>
+  </div>
 </div>
 </body>
 </html>
