--- a/pages/menu.html
+++ b/pages/menu.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns='http://www.w3.org/1999/xhtml'>
+<html xmlns='http://www.w3.org/1999/xhtml' lang='es'>
 <head>
   <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   <title>Restaurante Tritón | porfi.dev site</title>
@@ -8,21 +8,27 @@
 </head>
 
 <body>
-<div id='central_principal'>
-  <div id='logo'><img height='341' src='../imagenes/logo.png' width='343' /></div>
-  <div id='contenido'><img border='0' class='texto_menu' height='593' src='../imagenes/texto_menu.png' usemap='#Map'
-                           width='453' />
-    <map id='Map' name='Map'>
-      <area alt='Ver Menú' coords='0,0,351,34' href='entradas-ensaladas.html' shape='rect' />
-      <area alt='Ver Menú' coords='0,63,310,101' href='barrafria.html' shape='rect' />
-      <area alt='Ver Menú' coords='-6,202,453,330' href='hamburguesas-combos.html' shape='rect' />
-      <area alt='Ver Menu' coords='-6,128,445,167' href='principales-especialidades.html' shape='rect' />
-      <area coords='1,365,303,397' href='bebidas-postres.html' shape='rect' />
-      <area coords='2,430,365,462' href='omelets-individuales.html' shape='rect' />
-      <area coords='-2,499,214,527' href='desayunos.html' shape='rect' />
-      <area alt='Ver Menú' coords='2,564,304,590' href='ensaladas.html' shape='rect' />
-    </map>
+<div class='container'>
+  <div id='central_principal'>
+    <div id='logo'><img height='341' src='../imagenes/logo.png' width='343' alt='logo' /></div>
+    <div id='contenido'><img border='0' class='texto_menu' height='606' src='../imagenes/texto_menu.png' usemap='#Map'
+                             width='467' alt='texto menu' />
+      <map id='Map' name='Map'>
+        <area alt='Ver Menú' coords='0,0,351,34' href='menu/entradas-ensaladas.html' shape='rect' />
+        <area alt='Ver Menú' coords='0,63,310,101' href='menu/barrafria.html' shape='rect' />
+        <area alt='Ver Menú' coords='-6,202,453,330' href='menu/hamburguesas-combos.html' shape='rect' />
+        <area alt='Ver Menu' coords='-6,128,445,167' href='menu/principales-especialidades.html' shape='rect' />
+        <area alt='Bebidas y postres' coords='1,365,303,397' href='menu/bebidas-postres.html' shape='rect' />
+        <area alt='Omelets e Individuales' coords='2,430,365,462' href='menu/omelets-individuales.html' shape='rect' />
+        <area alt='Desayunos' coords='-2,499,214,527' href='menu/desayunos.html' shape='rect' />
+        <area alt='Ensaladas Master' coords='2,564,304,590' href='menu/ensaladas.html' shape='rect' />
+      </map>
+    </div>
+  </div>
+  <div class='footer'>
+    <span>Desarrollado por <a href='https://porfi.dev'>porfi.dev</a></span>
   </div>
 </div>
+
 </body>
 </html>
