--- a/pages/menu/bebidas-postres.html
+++ b/pages/menu/bebidas-postres.html
@@ -4,14 +4,13 @@
 <head>
   <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   <title>Restaurante Tritón | porfi.dev site</title>
-  <link href='../styles/estilos.css' rel='stylesheet' type='text/css' />
+  <link href='../../styles/estilos.css' rel='stylesheet' type='text/css' />
 </head>
 
 <body>
 <div class='container'>
   <div id='central_principal'>
-    <div id='logo'><img height='341' src='../imagenes/logo.png' width='343' /></div>
-    <div id='contenido_ubicacion'></div>
+    <div id='contenido_large'><img height='724' src='../../imagenes/texto_bebidas-postres.png' width='976' /></div>
   </div>
   <div class='footer'>
     <span>Desarrollado por <a href='https://porfi.dev'>porfi.dev</a></span>
