--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -8,8 +8,13 @@
 </head>
 
 <body>
-<div id='central_principal'>
-  <div id='contenido_large'><img height='727' src='../imagenes/texto_promociones.png' width='977' /></div>
+<div class='container'>
+  <div id='central_principal'>
+    <div id='contenido_large'><img height='727' src='../imagenes/texto_promociones.png' width='977' /></div>
+  </div>
+  <div class='footer'>
+    <span>Desarrollado por <a href='https://porfi.dev'>porfi.dev</a></span>
+  </div>
 </div>
 </body>
 </html>
