--- a/pages/menu/barrafria.html
+++ b/pages/menu/barrafria.html
@@ -4,12 +4,16 @@
 <head>
   <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   <title>Restaurante Tritón | porfi.dev site</title>
-  <link href='../styles/estilos.css' rel='stylesheet' type='text/css' />
+  <link href='../../styles/estilos.css' rel='stylesheet' type='text/css' />
 </head>
 
 <body>
-<div id='central_principal'>
-  <div id='contenido_large'><img height='720' src='../imagenes/texto_principales-especialidades.png' width='975' />
+<div class='container'>
+  <div id='central_principal'>
+    <div id='contenido_large'><img height='721' src='../../imagenes/texto_barrafria.png' width='976' /></div>
+  </div>
+  <div class='footer'>
+    <span>Desarrollado por <a href='https://porfi.dev'>porfi.dev</a></span>
   </div>
 </div>
 </body>
